fix: adds nowrap style to navigation links
Implements a nowrap style for navigation links to prevent text wrapping, enhancing readability and maintaining layout integrity.

--- a/src/app/shared/nav/nav.component.scss
+++ b/src/app/shared/nav/nav.component.scss
@@ -110,7 +110,11 @@ section {
     div{
       @include dFlex($fd: column);
     }
+
+    a {
+      white-space: nowrap;
   }
+}
 
   .legal-pages-container{
     display: none;
